--- a/requirements.txt
+++ b/requirements.txt
@@ -6,18 +6,36 @@ annotated-types==0.6.0
 async-timeout==4.0.3
 asyncpg==0.29.0
 attrs==23.2.0
+cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==2.1.1
 et-xmlfile==1.1.0
 frozenlist==1.4.1
+google-api-core==2.17.1
+google-api-python-client==2.122.0
+google-auth==2.28.2
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+googleapis-common-protos==1.63.0
 greenlet==3.0.3
+httplib2==0.22.0
 idna==3.6
 magic-filter==1.0.12
 multidict==6.0.5
+oauthlib==3.2.2
 openpyxl==3.1.2
+protobuf==4.25.3
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
 pydantic==2.5.3
 pydantic_core==2.14.6
+pyparsing==3.1.2
 python-dotenv==0.20.0
+requests==2.31.0
+requests-oauthlib==1.4.0
+rsa==4.9
 SQLAlchemy==2.0.28
 typing_extensions==4.10.0
+uritemplate==4.1.1
+urllib3==2.2.1
 yarl==1.9.4
