--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
   bot:
     build: .
     command: python bot.py
-    restart: always
+#    restart: always
     volumes:
       - .:/usr/src/app
     depends_on:
