--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,10 +19,11 @@ services:
 #    restart: always
     volumes:
       - .:/usr/src/app
+      - /var/log/mybot:/usr/src/app/logs # Это добавленный том
     depends_on:
       - postgres
-    cpus: "0.5"
-    mem_limit: 300m
+    cpus: "2"
+    mem_limit: 500m
 
 volumes:
   postgres_data:
