--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
 #    restart: always
     volumes:
       - .:/usr/src/app
-      - /var/log/mybot:/usr/src/app/logs # Это добавленный том
+      - /var/log/mybot:/usr/src/app # Это добавленный том
     depends_on:
       - postgres
     cpus: "1"
